099 Deploy Ngin Web Application Using Custome Namespace Deployment Service HPA Ingress/01-namespace-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
# kubectl apply -f namespace-dev.yaml
#
