099 Deploy Ngin Web Application Using Custome Namespace Deployment Service HPA Ingress/06-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nginx.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80

# kubectl apply -f nginx-ingress.yaml

# kubectl get svc -n dev -l app.kubernetes.io/name=ingress-nginx
